# kernel

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  checkpointai  docker-compose.yml  kernel-cli  loopharness  opc-os  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
checkpoint_ai/: __init__.py  api.py  checkpoint_ai.py  cli.py  config.py  demo.py  harness.py  human_cli.py  reporting.py  v2_cli.py
checkpoint_ai/adapter/: __init__.py  base.py  capabilities.py  dummy_adapter.py  opc_agent_adapter.py  quant_research_adapter.py  registry.py
checkpoint_ai/agent_config/: __init__.py  context.py  store.py
checkpoint_ai/alerts/: __init__.py  alert_channel.py  alert_manager.py
checkpoint_ai/auth/: __init__.py  api_key_manager.py  bearer_token.py
checkpoint_ai/autonomy/: __init__.py  eligibility.py  feedback.py  queue.py  store.py
checkpoint_ai/businessline/: __init__.py  models.py  registry.py
checkpoint_ai/cache/: __init__.py
checkpoint_ai/config_version/: __init__.py  service.py  store.py
checkpoint_ai/console/: __init__.py  approval.py  backup.py  dashboard.py  models.py  notification_routing.py  read_model.py
checkpoint_ai/control/: __init__.py  defaults.py  gate.py
checkpoint_ai/decision/: __init__.py  store.py
checkpoint_ai/diagnostics/: __init__.py  diagnostic_report.py  health_checker.py
checkpoint_ai/dryrun/: __init__.py  context.py  provider.py  tool.py  validator.py
checkpoint_ai/evaluation/: __init__.py  evaluator.py  evidence.py  gate.py  platform.py  readability.py  runner.py  seo.py
checkpoint_ai/events/: __init__.py  bus.py  logger.py
checkpoint_ai/evidence/: __init__.py  baseline_store.py  cli.py  models.py  quality.py  quant_drill.py  service.py  storage.py
checkpoint_ai/experiment/: __init__.py  baseline.py  cli.py  compare.py  data_quality.py  feedback.py  ledger.py  loop_engine.py  models.py  risk_score.py  storage.py
checkpoint_ai/external_agents/: __init__.py  adapter.py  models.py  store.py
checkpoint_ai/ha/: __init__.py  manager.py
checkpoint_ai/insights/: __init__.py  cross_scenario.py  store.py
checkpoint_ai/isolation/: __init__.py  auditor.py
checkpoint_ai/learning/: __init__.py  aggregation.py  loop.py  models.py  observers.py  proposers.py  ranking.py  safety.py  scheduler.py  store.py  validator.py
checkpoint_ai/llm/: __init__.py  providers.py  registry.py
checkpoint_ai/logs/: __init__.py  raw_log.py  summary_log.py
checkpoint_ai/loop/: __init__.py  engine.py  models.py  store.py
checkpoint_ai/memory/: __init__.py  context.py  memory.py
checkpoint_ai/metrics/: __init__.py  schema.py  store.py
checkpoint_ai/models/: __init__.py  run.py  task.py
checkpoint_ai/notification/: __init__.py  channels.py  manager.py
checkpoint_ai/observability/: __init__.py  cost_tracker.py  metrics.py  performance.py
checkpoint_ai/optimization/: __init__.py  store.py  (+1 more)
deploy/: nginx.conf
docs/: ARCHITECTURE_OVERVIEW.md  AUTONOMOUS_AGENTS_PLAN.md  AUTONOMOUS_LOOP_IMPLEMENTATION.md  AUTONOMOUS_LOOP_PLAN.md  BLUEPRINT.md  BUSINESS_LINE_ARCHITECTURE.md  HERMES_WEB_UI_PLAN.md  INNOVATION_RESEARCH.md  README.md  STRATEGIC_RESET_PLAN.md  SYSTEM_BOUNDARIES.md  UI_PLAN_SUMMARY.md  V0.3_INNOVATION_PROMPT.md  V0.3_PROMPT.md  V0.4_PROMPT.md  V2.9_DATA_RUN_REPORT.md  V4_PLAN.md  V5_REAL_DATA_DRILL.md  V5_STABLE_ACCEPTANCE.md  V6_PLAN.md  V6_STABLE_ACCEPTANCE.md  V7_PLAN.md  V7_REAL_DATA_DRILL_REPORT.md  V7_RISK_REVIEW.md  V7_STABLE_ACCEPTANCE.md  WEB_UI_PLAN.md  metrics_reference.md
examples/: README.md  businessline_isolation.py  cost_control.py  evaluation_gate_workflow.py  human_gate.py  quickstart.py  telegram_notification.py
kernel/: __init__.py  api.py  cli.py  config.py  kernel.py
loop_harness/: __init__.py  api.py  cli.py  config.py  demo.py  harness.py  human_cli.py  loop_harness.py  reporting.py
opc_os/: __init__.py  api.py  cli.py  config.py  kernel.py  opc_os.py
scripts/: README.md  benchmark.py  final_acceptance.py  health_check.py  run_checkpointai_service.py  run_kernel_service.py  run_opc_os_service.py  run_v29_quant_data.py  security_audit.py  stress_test.py  v7_learning_loop_drill.py
tests/: README.md  __init__.py  helpers.py  test_alerts.py  test_api.py  test_auth_webhook_cli.py  test_businessline.py  test_cache.py  test_config_env.py  test_cost_tracking.py  test_diagnostics.py  test_dryrun.py  test_evaluation.py  test_experiment.py  test_feedback.py  test_ha.py  test_integration.py  test_llm.py  test_memory.py  test_models.py  test_notification.py  test_observability.py  test_performance.py  test_plugins.py  test_policy_v04.py  test_production_readiness.py  test_risk_hardening.py  test_runtime.py  test_runtime_policy.py  test_scheduler.py  test_templates.py  test_v21_scenario_adapter_logs.py  test_v22_prompt_versions.py  test_v26_cli_report.py  test_v27_opc_agent_adapter.py  test_v29_quant_demo.py  test_v31_evidence_evaluation.py  test_v32_scenario_metric_schema.py  test_v33_version_recommender.py  test_v34_bayesian_optimization.py  (+11 more)
user/: SUGGESTED_PROFILE_NOTES.md  USER_PROFILE.md
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
(+555 files in other folders)
